--- a/files/htdocs/tinycombo.css
+++ b/files/htdocs/tinycombo.css
@@ -1190,6 +1190,10 @@ table.cbi-section-table td.cbi-section-table-cell {
   text-align: right;
   white-space: nowrap;
 }
+table#neighbors.cbi-section-table th.cbi-section-table-cell,
+table#neighbors.cbi-section-table td.cbi-section-table-cell {
+  text-align:center;
+}
 .cbi-value-description {
   display: inline;
   font: normal 1em Helvetica, Arial, sans-serif;
